data/derived/comb/progs/unify/prog8864.ml.out
Characters 159-184:
  then (1, 1::(((i+j+m)-10)::t))
       ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
